# serde-svg

./: Cargo.toml
projects/serde-html/: Cargo.toml
projects/serde-html/src/: errors.rs  lib.rs
projects/serde-html/src/traits/: edit.rs  mod.rs  show.rs
projects/serde-html/src/values/: from.rs  mod.rs
projects/serde-svg/: Cargo.toml
projects/wasi-serde/: Cargo.toml
projects/wasi-serde/src/: lib.rs
projects/wasi-serde/src/exports/: imports.rs
projects/wasi-serde/src/ser/: mod.rs
projects/wasi-serde/wit/: world.wit
