[package]
name = "serde-html"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Strong typed html with serde support"
repository = "https://github.com/oovm/serde-html"
documentation = "https://docs.rs/serde-html"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
image = "0.25.1"
imageproc = "0.24.0"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
